# ForgeChat

./: .env.example  .gitignore  FEATURE_BACKLOG.md  README.md  docker-compose.yml  nginx.conf
.forgejo/workflows/: deploy.yml
.github/workflows/: deploy.yml
client/: generate-icons.mjs  index.html  package-lock.json  package.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  index.css
client/src/api/: client.ts
client/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  KeyboardShortcutsModal.tsx  Onboarding.tsx  QuickSwitcher.tsx  UserPopup.tsx
client/src/components/activity/: ActivityFeedPanel.tsx
client/src/components/chat/: DMConversation.tsx  EditHistoryModal.tsx  EmojiPicker.tsx  ExportConversationButton.tsx  ForwardModal.tsx  GifPicker.tsx  LightboxModal.tsx  LinkPreview.tsx  MemberList.tsx  (+16 more)
client/src/contexts/: SplitContext.tsx
client/src/hooks/: useAudioNotifications.ts  useCountdown.ts  useDmCall.ts  useEscapeKey.ts  useFormatDate.ts  useIntersection.ts  useKeyboardNav.ts  usePushNotifications.ts  useVoiceActivity.ts  useWebRTC.ts
client/src/pages/: ActivityFeedPage.tsx  AdminPage.tsx  AuditLogPage.tsx  AutoModPage.tsx  ChannelPage.tsx  DMPage.tsx  ExplorePage.tsx  ForumPage.tsx  FriendInvitePage.tsx  FriendsPage.tsx  GroupDMPage.tsx  LandingPage.tsx  LeaderboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  SavedPage.tsx  ServerAdminPage.tsx  ServerDiscoveryPage.tsx  ServerEventsPage.tsx  ServerStatsPage.tsx  SettingsPage.tsx  TicketsPage.tsx  UserProfilePage.tsx  VerifyEmailPage.tsx  VideoChannelPage.tsx  VoiceChannelPage.tsx  VoiceVideoPage.tsx
client/src/store/: auth.ts  call.ts  channelNotif.ts  chat.ts  presence.ts  unread.ts  voice.ts  ws.ts
client/src/utils/: markdown.tsx
desktop/: .gitignore  build.bat  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/superpowers/plans/: 2026-06-22-friends-ultra.md  2026-06-25-forgechat-prod-ready.md
server/: Cargo.toml  Dockerfile
server/migrations/: 002_threads_forum.sql  003_unread.sql  004_features.sql  005_v2_1.sql  006_megafeatures.sql  008_channel_extras.sql  009_phase3.sql  012_user_profiles.sql  013_friends_ultra.sql  014_channel_perm_unique.sql  015_server_settings_extended.sql  017_stickers.sql  017_webhooks.sql  019_dm_user_settings.sql  020_server_boosts.sql  021_2fa.sql  022_sessions.sql  023_reminders.sql  024_tickets.sql  025_antispam.sql  026_focus.sql  027_ephemeral.sql  028_status_emoji.sql  029_reports.sql  030_group_dms.sql  031_archive_channels.sql  032_emoji_mime_type.sql  033_hidden_channels.sql  034_email_prefs.sql  035_birthday.sql  036_perf_indexes.sql  038_dm_reply_and_attachments.sql  039_channel_notif_overrides.sql  043_messages_poll_id.sql  044_performance_indices.sql  048_missing_indexes.sql  049_trgm_search_indexes.sql
server/src/: config.rs  email.rs  error.rs  main.rs  state.rs
server/src/handlers/: audit.rs  auth.rs  bots.rs  channels.rs  desktop.rs  dm_extras.rs  emojis.rs  events.rs  feeds.rs  forum.rs  friends.rs  group_dms.rs  messages.rs  mod.rs  moderation.rs  polls.rs  privacy.rs  reads.rs  reports.rs  roles.rs  saved.rs  scheduled.rs  search.rs  server_settings.rs  servers.rs  soundboard.rs  stickers.rs  templates.rs  threads.rs  tickets.rs  totp.rs  uploads.rs  user_settings.rs  users.rs  voice.rs  webhooks.rs  websocket.rs
server/src/middleware/: auth.rs
server/src/models/: channel.rs  message.rs  role.rs  server.rs  user.rs
(+63 files in other folders)
