[package]
name = "forgechat-server"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "forgechat"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
bytes = "1"
rand = "0.8"
base64 = "0.22"
mime_guess = "2"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
