[package]
name = "forgechat-desktop"
version = "1.3.0"
edition = "2021"

[lib]
name = "forgechat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forgechat-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
