[package]
name = "forgechat-desktop"
version = "3.2.0"
edition = "2021"

[lib]
name = "forgechat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forgechat-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
